# EnergyScrapper

./: .gitignore  README.md  pyproject.toml  tasks.txt
data/: counters.xlsx
energyscrapper/: common.py  commonday.py  commonperiod.py  commons.py  connections.py  consumptions.py  counters.py  dayscommon.py  dayviews.py  dirs.py  excels.py  inputwindows.py  periodviews.py  views.py
excelupdater/: notice.txt  updater.py
heatscrapper/: indelrequests.py
updater/: updater.py
