[tool.poetry]
name = "energyscrapper"
version = "0.1.0"
description = ""
authors = ["Mixail132 <millionbaxov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy-firebird = "^2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
