[tool.poetry]
name = "energyscrapper"
version = "0.1.0"
description = ""
authors = ["Mixail132 <millionbaxov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fdb = "^2.0.2"
python-dotenv = "^1.0.1"
regex = "^2023.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
